new update interface