@@ -23,43 +23,38 @@ public abstract class Table {
 	 * all sub classes must have a default constructor
 	 */
 
+	/*
+	 * accessors implemented using static method in Table
+	 */
 	public abstract String getCreator();
 
 	public abstract String C();
 
 	public abstract String R();
 
-	public abstract String U();
+	public abstract String U(Table select);
 
 	public abstract String D();
+	
+	public abstract String increase();
 
+	/*
+	 * for new instances
+	 */
+	public abstract Table clone();
+
+	public abstract void initDefault();// all field should be inited except pid
+
+	public abstract void record(Context context);
+
+	/*
+	 * id field and pid field
+	 */
 	public abstract int getId();
 
 	public abstract void setId(int id);
 
 	public abstract void setPid(int pid);
-
-	public abstract void record(Context context);
-
-	public abstract void initDefault();// all field should be inited except pid
-										// and id
-
-	protected static String buildCreator(Class<? extends Table> clazz) {
-		StringBuilder sql = new StringBuilder("CREATE TABLE "
-				+ clazz.getSimpleName()
-				+ " (id INTEGER PRIMARY KEY AUTOINCREMENT");
-		Field[] fields = clazz.getDeclaredFields();
-		for (Field field : fields) {
-			if ("id".equalsIgnoreCase(field.getName())) {
-				continue;
-			}
-			sql.append(", " + field.getName() + " "
-					+ typeMap.get(field.getType()));
-		}
-		sql.append(")");
-
-		return sql.toString();
-	}
 
 	protected static String C(Table table) throws IllegalAccessException,
 			IllegalArgumentException {
@@ -94,32 +89,21 @@ public abstract class Table {
 	protected static String D(Table table) throws IllegalAccessException,
 			IllegalArgumentException {
 		Class<? extends Table> clazz = table.getClass();
-		Field[] fields = clazz.getDeclaredFields();
-		boolean hasValue = false;
-		StringBuilder sql = new StringBuilder("DELETE FROM "
-				+ clazz.getSimpleName() + " WHERE ");
-
-		for (Field field : fields) {
-			Object def = getDefaultValue(field);
-			Object val = getValue(table, field);
-			if (!def.equals(val)) {
-				if (hasValue) {
-					sql.append(" AND ");
-				}
-				hasValue = true;
-				sql.append(field.getName() + " = " + val);
-			}
+		String where = getWhereClause(table);
+		if (null == where) {
+			return null;
 		}
-		if (!hasValue) {
+		return "DELETE FROM " + clazz.getSimpleName() + where;
+	}
+
+	protected static String U(Table select, Table table)
+			throws IllegalAccessException, IllegalArgumentException {
+		Class<? extends Table> clazz = table.getClass();
+		String where = getWhereClause(select);
+		if (null == where) {
 			return null;
 		}
 
-		return sql.toString();
-	}
-
-	protected static String U(Table table) throws IllegalAccessException,
-			IllegalArgumentException {
-		Class<? extends Table> clazz = table.getClass();
 		Field[] fields = clazz.getDeclaredFields();
 		boolean hasValue = false;
 		StringBuilder sql = new StringBuilder("UPDATE " + clazz.getSimpleName()
@@ -143,8 +127,18 @@ public abstract class Table {
 			return null;
 		}
 
-		sql.append(" WHERE id = " + table.getId());
+		sql.append(where);
 		return sql.toString();
+	}
+
+	protected static String R(Table table) throws IllegalAccessException,
+			IllegalArgumentException {
+		Class<? extends Table> clazz = table.getClass();
+		String where = getWhereClause(table);
+		if (null == where) {
+			where = "";
+		}
+		return "SELECT * FROM " + clazz.getSimpleName() + where;
 	}
 
 	protected static String increase(Table table)
@@ -156,14 +150,14 @@ public abstract class Table {
 		StringBuilder sql = new StringBuilder("UPDATE " + clazz.getSimpleName()
 				+ " SET ");
 		StringBuilder where = new StringBuilder(" WHERE id = " + table.getId());
-
+	
 		for (Field field : fields) {
 			if ("id".equalsIgnoreCase(field.getName())) {
 				continue;
 			}
 			Object def = getDefaultValue(field);
 			Object val = getValue(table, field);
-
+	
 			if (!def.equals(val)) {
 				String step = getStep(table, field);
 				if (null != step) {
@@ -184,18 +178,50 @@ public abstract class Table {
 		if (!sqlAdded) {
 			return null;
 		}
-
+	
 		sql.append(where);
 		return sql.toString();
 	}
 
-	protected static String R(Table table) throws IllegalAccessException,
-			IllegalArgumentException {
+	/*
+	 * implementation using reflection
+	 * supporting all abstract method with the same name
+	 * */
+	protected static Table clone(Table table) throws InstantiationException,
+			IllegalAccessException {
+		Class<? extends Table> clazz = table.getClass();
+		Table result = (Table) clazz.newInstance();
+		Field[] fields = clazz.getDeclaredFields();
+		for (Field field : fields) {
+			field.setAccessible(true);
+			field.set(result, field.get(table));
+		}
+		return result;
+	}
+
+	protected static String buildCreator(Class<? extends Table> clazz) {
+		StringBuilder sql = new StringBuilder("CREATE TABLE "
+				+ clazz.getSimpleName()
+				+ " (id INTEGER PRIMARY KEY AUTOINCREMENT");
+		Field[] fields = clazz.getDeclaredFields();
+		for (Field field : fields) {
+			if ("id".equalsIgnoreCase(field.getName())) {
+				continue;
+			}
+			sql.append(", " + field.getName() + " "
+					+ typeMap.get(field.getType()));
+		}
+		sql.append(")");
+	
+		return sql.toString();
+	}
+
+	private static String getWhereClause(Table table)
+			throws IllegalAccessException, IllegalArgumentException {
 		Class<? extends Table> clazz = table.getClass();
 		Field[] fields = clazz.getDeclaredFields();
 		boolean hasValue = false;
-		StringBuilder sql = new StringBuilder("SELECT * FROM "
-				+ clazz.getSimpleName() + " WHERE ");
+		StringBuilder sql = new StringBuilder(" WHERE ");
 
 		for (Field field : fields) {
 			Object def = getDefaultValue(field);
@@ -220,11 +246,11 @@ public abstract class Table {
 		Class<?> clazz = field.getType();
 		Object result = new Object();
 		if (int.class == clazz || Integer.class == clazz) {
-			result = new Integer(annotation.defaultValue());
+			result = Integer.valueOf(annotation.defaultValue());
 		} else if (String.class == clazz) {
 			result = annotation.defaultValue();
 		} else if (double.class == clazz || Double.class == clazz) {
-			result = new Double(annotation.defaultValue());
+			result = Double.valueOf(annotation.defaultValue());
 		}
 		return result;
 	}
@@ -235,13 +261,13 @@ public abstract class Table {
 		field.setAccessible(true);
 		Object result = new Object();
 		if (int.class == clazz) {
-			result = new Integer(field.getInt(table));
+			result = Integer.valueOf(field.getInt(table));
 		} else if (Integer.class == clazz) {
 			result = field.get(table);
 		} else if (String.class == clazz) {
 			result = field.get(table);
 		} else if (double.class == clazz) {
-			result = new Double(field.getDouble(table));
+			result = Double.valueOf(field.getDouble(table));
 		} else if (Double.class == clazz) {
 			result = field.get(table);
 		}
@@ -276,28 +302,16 @@ public abstract class Table {
 		if (annotation.increaseWhenUpdate()) {
 			Object step = getValue(table, field);
 			String stepString = null;
-			if (int.class == step.getClass()) {
-				int s = (int) step;
-				if (s > 0) {
-					stepString = "+" + s;
-				} else {
-					stepString = "" + s;
-				}
-			} else if (Integer.class == step.getClass()) {
+			if (int.class == step.getClass()
+					|| Integer.class == step.getClass()) {
 				Integer s = (Integer) step;
 				if (s > 0) {
 					stepString = "+" + s.intValue();
 				} else {
 					stepString = "" + s.intValue();
 				}
-			} else if (double.class == step.getClass()) {
-				double s = (double) step;
-				if (s > 0) {
-					stepString = "+" + s;
-				} else {
-					stepString = "" + s;
-				}
-			} else if (Double.class == step.getClass()) {
+			} else if (double.class == step.getClass()
+					|| Double.class == step.getClass()) {
 				Double s = (Double) step;
 				if (s > 0) {
 					stepString = "+" + s.doubleValue();
